--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.7.2",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.0",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-snackbar": "^2.6.2",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.1",
