--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.0",
+    "react-native-camera": "^4.2.1",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-permissions": "^4.1.5",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
