--- a/ios/idr/Info.plist
+++ b/ios/idr/Info.plist
@@ -31,8 +31,12 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>We are using Camera to scan the Qr code</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We are accessing library to upload the image for inventory</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
@@ -56,6 +60,12 @@
 		<string>Roboto-Regular.ttf</string>
 		<string>Inter-Bold.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -70,9 +80,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We are accessing library to upload the image for inventory</string>
-    <key>NSCameraUsageDescription</key>
-    <string>We are using Camera to scan the Qr code</string>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+<array>
+    <string>com.example.app.backgroundTask</string>
+</array>
 </dict>
 </plist>
