--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/messaging": "^20.4.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-native-push-notification": "^8.1.4",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "react": "18.2.0",
